--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@
             width: 760px;
             height: auto;
             margin: 100px auto;
-            padding: 20px 20px 9px;
+            /*padding: 20px 20px 9px;*/
             background: #9dd2ea;
             background: linear-gradient(#9dd2ea, #8bceec);
             border-radius: 3px;
-            box-shadow: 0px 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px #009de4, 0px 10px 15px rgba(0, 0, 0, 0.2);
         }
 .code{ font-family: Courier New;}
 .dangercolor{color: brown;}
