--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            
-           /* font: bold 14px Arial, sans-serif;*/
-        }
+       
         
         html {
             height: 100%;
@@ -15,10 +9,11 @@
        
         
         .aryfunction {
+              box-sizing: border-box;
             width: 760px;
             height: auto;
             margin: 100px auto;
-            /*padding: 20px 20px 9px;*/
+            padding: 20px 20px 9px;
             background: #9dd2ea;
             background: linear-gradient(#9dd2ea, #8bceec);
             border-radius: 3px;
